--- a/fragments/footer.html
+++ b/fragments/footer.html
@@ -2,8 +2,8 @@
 
   <!-- Copyright -->
   <div class="footer-sponsors text-center py-1"> Sponsored by
-    <a href="https://www.cynkra.com/" target="_blank"><img src="https://user2021.r-project.org/img/artwork/cynkra.png" id="cynkra-logo" class="img-fluid img-thumbnail" alt="Cynkra"></a>
-    <a href="https://www.rstudio.com/" target="_blank"><img src="https://user2021.r-project.org/img/artwork/rstudio-flat.svg" class="img-fluid img-thumbnail mx-3" alt="RStudio"></a>
+    <a href="https://www.cynkra.com/" target="_blank"><img src="https://user2021.r-project.org/img/artwork/cynkra.png" id="cynkra-logo" class="img-fluid img-thumbnail mx-3" alt="Cynkra"></a>
+    <a href="https://www.rstudio.com/" target="_blank"><img src="https://user2021.r-project.org/img/artwork/rstudio-flat.svg" class="img-fluid img-thumbnail" alt="RStudio"></a>
   </div>
   <!-- Copyright -->
 
