--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,63 @@
+/* Navbar to the side */
+
+#navbar > ul {
+  display: none;
+}
+
+#sidebar {
+  padding: 0;
+}
+
+.section.sidebar {
+  background: #00438d;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-right: 2em;
+  box-shadow: 1px 1px 1px rgba(0,0,0,.225),2px 2px 2px rgba(0,0,0,.15);
+}
+
+.sidebar-pages {
+  list-style: none;
+  font-family: inherit;
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0.5em;
+}
+
+.sidebar-pages > p {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navlink {
+	text-decoration: none;
+	font-family: inherit;
+	text-transform: uppercase;
+	letter-spacing: .1em;
+	background: var(--blue);
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	padding: .5em;
+	border-bottom: 1px solid white;
+	color: var(--white);
+}
+
+.navlink:hover {
+  text-decoration: none;
+  border-right: 3px solid white;
+  background: #003c7e;
+	color: #f5f5f5;
+}
+
+.navlink:focus {
+  color: white;
+  text-decoration: none;
+}
+
 /* Backup style for tweets */
 
 blockquote.twitter-tweet {
