--- a/fragments/sidebar.html
+++ b/fragments/sidebar.html
@@ -2,5 +2,5 @@
 <a class="navlink" href="#home" data-toggle="tab" aria-expanded="false"><i class="ion ion-home"></i> Home</a>
 <a class="navlink" href="#rankings" data-toggle="tab" aria-expanded="true"><i class="ion ion-arrow-graph-up-right"></i> Rankings</a>
 <a class="navlink" href="#data" data-toggle="tab" aria-expanded="true"><i class="ion ion-stats-bars"></i>  Data</a>
-<a class="navlink" href="https://r-community.org/usergroups/" aria-expanded="true" target="_blank"><i class="fa fa-external-link-alt"></i> R Community Explorer</a>
+<a class="navlink" href="https://r-community.org/usergroups/" aria-expanded="true" target="_blank"><i class="fa fa-external-link-alt"></i> r-community.org</a>
 </div>
