--- a/styles/main.css
+++ b/styles/main.css
@@ -10,23 +10,28 @@
 
 .section.sidebar {
   background: #00438d;
+  width: 220px !important;
   padding-left: 0px;
   padding-right: 0px;
-  margin-right: 2em;
+  margin-right: 10em;
   box-shadow: 1px 1px 1px rgba(0,0,0,.225),2px 2px 2px rgba(0,0,0,.15);
 }
 
 .sidebar-pages {
+  width: 220px;
   list-style: none;
   font-family: inherit;
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
   margin-top: 0.5em;
+  background: #00438d;
+  color: white;
 }
 
 .sidebar-pages > p {
   display: flex;
+  background: #00438d;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -35,12 +40,11 @@
 .navlink {
 	text-decoration: none;
 	font-family: inherit;
-	text-transform: uppercase;
 	letter-spacing: .1em;
 	background: var(--blue);
 	width: 100%;
 	height: 100%;
-	text-align: center;
+	text-align: left;
 	padding: .5em;
 	border-bottom: 1px solid white;
 	color: var(--white);
@@ -90,6 +94,10 @@ blockquote.twitter-tweet {
 
 .datatable-container {
   max-width: 99.8%;
+}
+
+#dashboard-container {
+  padding-left: 230px !important;
 }
 
 .chart-stage .echarts4r {
@@ -196,8 +204,9 @@ blockquote.twitter-tweet {
 }
 
 .footer-sponsors > a > .img-fluid {
-  width: 5em;
-  height: 3em;
+  width: 6em;
+  height: 4em;
+  padding-right: 15px;
 }
 
 .cover-img {
@@ -207,5 +216,6 @@ blockquote.twitter-tweet {
 
 .page-footer {
   margin-left: -10px;
+  padding: 30px;
 }
 
